fix truncate in LineConfigurator

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -2,6 +2,10 @@
   width: 240px;
 }
 
+.text-truncate-right {
+  direction: rtl;
+}
+
 .table-xy-overflow-scroll {
   display: block;
   width: 100%;
